--- a/module_2_3_4_5/.babelrc
+++ b/module_2_3_4_5/.babelrc
@@ -9,5 +9,8 @@
             }
         ],
         "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "@babel/plugin-proposal-optional-chaining"
     ]
 }
