--- a/module_2_3_4_5/package.json
+++ b/module_2_3_4_5/package.json
@@ -16,14 +16,17 @@
     "@hapi/joi": "^16.1.8",
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.3",
+    "express-winston": "^4.0.3",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/node": "^7.7.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.7.7",
     "@types/express": "^4.17.2",
@@ -35,6 +38,6 @@
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.19.1",
     "nodemon": "^2.0.2",
-    "typescript": "^3.7.4"
+    "typescript": "^3.8.3"
   }
 }
