--- a/module_2_3_4_5/package.json
+++ b/module_2_3_4_5/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.3",
     "express-winston": "^4.0.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
@@ -31,6 +32,7 @@
     "@babel/preset-typescript": "^7.7.7",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
