--- a/module_2_3_4_5/package.json
+++ b/module_2_3_4_5/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^16.1.8",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.3",
     "express-winston": "^4.0.3",
@@ -30,6 +31,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.7.7",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
     "@types/jsonwebtoken": "^8.3.8",
