--- a/module_2_3_4_5/package.json
+++ b/module_2_3_4_5/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint . --ext .ts,.tsx",
     "babel": "babel-node --extensions \".ts,.tsx\"",
     "start": "nodemon --exec npm run babel src/index.ts"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^16.1.8",
+    "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.3",
@@ -31,9 +32,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.7.7",
+    "@types/config": "^0.0.36",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
+    "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
@@ -41,6 +44,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.19.1",
+    "jest": "^25.4.0",
     "nodemon": "^2.0.2",
     "typescript": "^3.8.3"
   }
